--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>แหวนเพชรแท้ GIA | แหวนแต่งงาน เพชรแท้ ราคาดี Mongkolsiri Diamond</title>
-  <meta name="description" content="แหวนเพชรแท้ GIA แหวนแต่งงาน เพชรแท้คัดเกรด ประกบประกาย ดีไซน์หรู ราคาพิเศษ มีใบรับรอง GIA พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond">
+  <meta name="description" content="แหวนเพชรแท้ GIA แหวนแต่งงาน เพชรแท้คัดเกรด ดีไซน์หรู ราคาพิเศษ มีใบรับรอง GIA พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond">
   <meta name="keywords" content="แหวนเพชรแท้ GIA, แหวนเพชรแต่งงาน, แหวนเพชร, เพชร GIA, แหวนแต่งงาน, wedding ring, diamond ring, ร้านแหวนเพชรแท้, ร้านเพชร GIA, diamond gia, diamond wedding ring">
-  <link rel="canonical" href="https://tuowzz.github.io/mbshopz.github.io/wedding-ring" />
+  <link rel="canonical" href="https://tuowzz.github.io/mbshopz.github.io/" />
   <meta name="robots" content="index,follow,max-image-preview:large" />
 
-  <!-- Open Graph for Facebook -->
+  <!-- OG Facebook / LINE -->
   <meta property="og:title" content="แหวนเพชรแท้ GIA | แหวนแต่งงาน Mongkolsiri Diamond" />
   <meta property="og:description" content="เลือกแหวนเพชรแต่งงานและเพชรแท้ GIA ดีไซน์หรู มีใบรับรอง ส่งฟรีทั่วไทย Mongkolsiri Diamond" />
   <meta property="og:image" content="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg" />
-  <meta property="og:url" content="https://tuowzz.github.io/mbshopz.github.io/wedding-ring" />
-  <meta property="og:type" content="product" />
-  <meta property="og:site_name" content="Mongkolsiri Diamond">
+  <meta property="og:url" content="https://tuowzz.github.io/mbshopz.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Mongkolsiri Diamond" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -61,35 +61,8 @@
       "postalCode": "10160",
       "addressCountry": "TH"
     },
-    "url": "https://tuowzz.github.io/mbshopz.github.io/wedding-ring"
+    "url": "https://tuowzz.github.io/mbshopz.github.io/"
   }
-  </script>
-
-  <!-- Facebook Pixel -->
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '127978927946856');
-    fbq('track', 'PageView');
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=127978927946856&ev=PageView&noscript=1"/>
-  </noscript>
-
-  <!-- Google Ads Tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16455237731"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'AW-16455237731');
   </script>
 
   <!-- Google Fonts -->
@@ -99,14 +72,13 @@
   <link rel="icon" href="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg" type="image/jpeg" />
 
   <style>
-    /* ... (CSS เดิมทั้งหมด) ... */
     * { box-sizing: border-box; }
     body { margin: 0; padding: 0; font-family: 'Merriweather', serif; background: #f9f7f4; color: #2b2b2b; line-height: 1.6; }
-    a { color: #b68e2f; text-decoration: none; transition: color 0.3s ease; }
-    a:hover { color: #876a1b; text-decoration: underline; }
-    img { max-width: 100%; display: block; border-radius: 12px; box-shadow: 0 10px 20px rgb(0 0 0 / 0.07);}
+    nav { background:#fff; box-shadow:0 2px 10px #0001; text-align:center; padding:1em 0;}
+    nav a { color: #b68e2f; text-decoration: none; margin: 0 13px; font-weight:700; font-size:1.07rem;}
+    nav a:hover { color: #876a1b; }
     .container { max-width: 1200px; margin: 0 auto; padding: 0 20px;}
-    .hero { text-align: center; padding: 5rem 1rem 4rem; background: white; border-bottom: 1px solid #ddd; position: relative; z-index: 10;}
+    .hero { text-align: center; padding: 4.5rem 1rem 3.2rem; background: white; border-bottom: 1px solid #ddd;}
     .hero h1 { font-family: 'Playfair Display', serif; font-size: 2.45rem; font-weight: 600; line-height: 1.2; color: #1c1c1c; margin-bottom: 1.2rem; max-width: 780px; margin-left: auto; margin-right: auto;}
     .hero p { font-size: 1.2rem; color: #555; margin-bottom: 2rem; max-width: 600px; margin-left: auto; margin-right: auto;}
     .brand { font-weight: 700; font-size: 1.3rem; letter-spacing: 0.1em; color: #b68e2f; margin-bottom: 2rem; text-transform: uppercase; font-family: 'Playfair Display', serif;}
@@ -119,42 +91,56 @@
     .gallery-item img { border-radius: 14px; box-shadow: 0 10px 20px rgb(0 0 0 / 0.05); border: 1px solid #eaeaea; margin-bottom: 1rem; transition: transform 0.3s ease; cursor: pointer;}
     .gallery-item img:hover { transform: scale(1.03); box-shadow: 0 15px 30px rgb(0 0 0 / 0.15);}
     .gallery-item p { font-size: 1rem; font-style: italic; color: #555; max-width: 280px; margin: 0 auto; user-select: none;}
-    .details { background: #fcf9f3; max-width: 800px; margin: 0 auto 4rem; padding: 3rem 2rem; border-radius: 14px; box-shadow: 0 5px 15px rgb(182 142 47 / 0.15); text-align: center; font-size: 1.17rem; color: #444; line-height: 1.7; font-weight: 500;}
+    .details { background: #fcf9f3; max-width: 800px; margin: 0 auto 3rem; padding: 3rem 2rem; border-radius: 14px; box-shadow: 0 5px 15px rgb(182 142 47 / 0.15); text-align: center; font-size: 1.17rem; color: #444; line-height: 1.7; font-weight: 500;}
     .details p { margin: 0;}
-    .cta { text-align: center; margin-bottom: 4rem;}
+    .cta { text-align: center; margin-bottom: 3.2rem;}
     .cta a { background: transparent; color: #b68e2f; border: 2.5px solid #b68e2f; padding: 0.9rem 3.2rem; border-radius: 50px; font-weight: 600; font-size: 1.1rem; margin: 0 1rem; transition: all 0.3s ease; display: inline-block; cursor: pointer; min-width: 170px;}
     .cta a:hover { background: #b68e2f; color: white; box-shadow: 0 8px 20px rgb(182 142 47 / 0.7);}
-    footer { background: #f3f3f3; color: #888; text-align: center; font-size: 0.9rem; padding: 2rem 1rem; border-top: 1px solid #ddd; font-weight: 400;}
+    .blog-section { background:#f8f7f2; border-radius:11px; margin-top:1.5em; padding:2em 1em; max-width:800px; margin-left:auto; margin-right:auto;}
+    .blog-section h2 { color:#b68e2f; font-size:1.2rem;}
+    .blog-section ul { list-style: none; padding:0;}
+    .blog-section li { margin-bottom:1.1em;}
+    .blog-section a { color:#222; text-decoration:underline;}
+    .blog-section a:hover { color:#b68e2f;}
+    .faq, .reviews {background: #fff; border-radius: 14px; max-width: 800px; margin: 3rem auto; padding: 2.3rem 1.5rem; box-shadow: 0 2px 12px #0001;}
+    .faq h2, .reviews h2 { color: #b68e2f; margin-bottom:1em; }
+    .faq h3 { margin-top:1.3em; font-size:1.1em; color:#222;}
+    .faq p { margin:0.3em 0 0.9em 0; }
+    .reviews blockquote { background: #fcf6ea; border-left: 5px solid #b68e2f; margin: 1.2em 0; padding: 1em 1.5em; border-radius:8px; color: #444; font-style: italic;}
+    .reviews cite { font-weight: bold; color: #b68e2f; display:block; margin-top:0.6em; }
+    footer { background: #f3f3f3; color: #888; text-align: center; font-size: 0.95rem; padding: 2rem 1rem; border-top: 1px solid #ddd;}
     footer a { color: #b68e2f; text-decoration: none; font-weight: 600;}
     footer a:hover { text-decoration: underline;}
     @media (max-width: 600px) {
       .hero h1 { font-size: 1.25rem; }
       .details { font-size: 1.03rem; padding: 1.4rem 1.1rem;}
       .cta a { font-size: 1rem; padding: 0.7rem 1.3rem; min-width: auto; margin: 0.5rem 0.5rem;}
+      .blog-section, .faq, .reviews { padding:1em 0.5em; }
     }
   </style>
 </head>
 <body>
+  <nav>
+    <a href="index.html">หน้าหลัก</a> |
+    <a href="blog.html">บทความแหวนเพชรแท้</a>
+  </nav>
   <section class="hero container">
     <h1>แหวนเพชรแท้ GIA<br>แหวนแต่งงานดีไซน์หรู พร้อมใบรับรอง</h1>
     <p>ร้านแหวนเพชรแท้ GIA ราคาดี แหวนแต่งงานคู่รัก เพชรคัดทุกเม็ด มีใบเซอร์ GIA<br>
       บริการสลักชื่อ ส่งฟรีทั่วไทย ประสบการณ์กว่า 20 ปีในวงการเพชรแท้</p>
     <div class="brand">Mongkolsiri Diamond</div>
     <div class="top-cta">
-      <a href="https://lin.ee/ZRrK7cl" target="_blank"
-         onclick="return gtag_report_conversion('https://lin.ee/ZRrK7cl'); fbq('track', 'Lead');">
+      <a href="https://lin.ee/ZRrK7cl" target="_blank">
          💬 ทัก LINE รับโปรฯ แหวนเพชรแท้
       </a>
     </div>
   </section>
-
   <section class="video container">
     <video autoplay muted playsinline loop controls>
       <source src="SaveTik.co_7421006142152756488.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </section>
-
   <section class="gallery container">
     <div class="gallery-item">
       <img src="ring_image_1.jpeg" alt="แหวนเพชรแท้ GIA ดีไซน์หรูหรา" />
@@ -173,7 +159,6 @@
       <p>🎁 กล่องของขวัญพรีเมียม สมเกียรติวันสำคัญ</p>
     </div>
   </section>
-
   <section class="details container">
     <p>
       💍 งานฝีมือช่างทองและช่างเพชรโดยตรง<br />
@@ -183,40 +168,63 @@
       <strong>เน้นแหวนเพชรแท้ GIA และแหวนแต่งงานทุกแบบ</strong>
     </p>
   </section>
-
   <section class="cta container">
-    <a href="https://lin.ee/ZRrK7cl" target="_blank"
-       onclick="return gtag_report_conversion('https://lin.ee/ZRrK7cl'); fbq('track', 'Lead');">
+    <a href="https://lin.ee/ZRrK7cl" target="_blank">
        💬 สอบถามราคาแหวนเพชรแท้ GIA
     </a>
-    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank"
-       onclick="fbq('track', 'ViewLocation');">
+    <a href="https://maps.app.goo.gl/Gy1417mtFmiCC1ud9" target="_blank">
        📍 ดูแผนที่หน้าร้าน Mongkolsiri Diamond
     </a>
+    <br><br>
+    <a href="blog.html" class="blog-link-cta" style="margin-top:1.1em;display:inline-block;">
+      📖 อ่านบทความรีวิวแหวนเพชรแท้ GIA ทั้งหมด
+    </a>
   </section>
-
+  <section class="blog-section container">
+    <h2>บทความแนะนำ</h2>
+    <ul>
+      <li>
+        <a href="blog-gia.html">5 เหตุผลที่ควรเลือกแหวนเพชรแท้ GIA สำหรับงานแต่งงาน</a>
+      </li>
+      <li>
+        <a href="blog-compare.html">เปรียบเทียบแหวนเพชรแท้ GIA กับเพชรทั่วไป</a>
+      </li>
+      <!-- เพิ่มบทความอื่นในอนาคต -->
+    </ul>
+    <a href="blog.html" style="font-size:1.01em; color:#b68e2f; text-decoration:underline;">ดูบทความทั้งหมด &raquo;</a>
+  </section>
+  <section class="faq container">
+    <h2>คำถามที่พบบ่อยเกี่ยวกับแหวนเพชรแท้ GIA</h2>
+    <h3>แหวนเพชร GIA คืออะไร?</h3>
+    <p>GIA คือสถาบันอัญมณีศาสตร์ที่ได้รับการยอมรับระดับโลก รับรองคุณภาพเพชรแท้ทุกเม็ด มีใบเซอร์พร้อมระบุรายละเอียดเพชรครบถ้วน</p>
+    <h3>เพชร GIA กับเพชรทั่วไปต่างกันยังไง?</h3>
+    <p>เพชรที่ผ่านการรับรอง GIA จะตรวจสอบคุณสมบัติโดยผู้เชี่ยวชาญ และมีมาตรฐานระดับสากล จึงมั่นใจได้ในคุณภาพและความโปร่งใส</p>
+    <h3>แหวนเพชรแท้ต้องดูอะไรบ้าง?</h3>
+    <p>เลือกจากใบเซอร์, การเจียระไน, ขนาดกะรัต, สีและความสะอาด เพื่อให้ได้แหวนที่คุ้มค่าที่สุด</p>
+    <h3>สั่งแหวนเพชรแท้กับ Mongkolsiri Diamond ได้ยังไง?</h3>
+    <p>ติดต่อผ่าน LINE, โทรศัพท์ หรือแวะชมหน้าร้าน เลือกแบบ-งบประมาณ-บริการครบ</p>
+  </section>
+  <section class="reviews container">
+    <h2>รีวิวจากลูกค้าที่เลือกแหวนเพชรแท้กับเรา</h2>
+    <blockquote>
+      “เลือกแหวนเพชร GIA จาก Mongkolsiri Diamond แล้วประทับใจมากค่ะ ราคาดี งานละเอียด ส่งเร็ว” 
+      <cite>— คุณแอน</cite>
+    </blockquote>
+    <blockquote>
+      “ร้านเพชรบริการดีมาก มีใบเซอร์ทุกวง ซื้อแล้วสบายใจ” 
+      <cite>— คุณโอม</cite>
+    </blockquote>
+    <blockquote>
+      “ได้แหวนแต่งงานคู่สวยมากค่ะ เหมาะกับวันสำคัญสุดในชีวิตจริงๆ” 
+      <cite>— คุณพีช</cite>
+    </blockquote>
+  </section>
   <footer>
-    &copy; 2025 Mongkolsiri Diamond | <a href="privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
+    <a href="index.html">หน้าหลัก</a> |
+    <a href="blog.html">บทความแหวนเพชรแท้ GIA</a> |
+    <a href="privacy-policy.html">นโยบายความเป็นส่วนตัว</a>
     <br>
     <span>คำค้น: แหวนเพชรแท้, แหวนแต่งงาน, เพชรแท้ GIA, ร้านแหวนเพชรแต่งงาน, diamond wedding ring, gia diamond</span>
   </footer>
-
-  <!-- Google Ads Conversion (LINE Click) -->
-  <script>
-    function gtag_report_conversion(url) {
-      var callback = function () {
-        if (typeof url !== 'undefined') {
-          window.location = url;
-        }
-      };
-      gtag('event', 'conversion', {
-          'send_to': 'AW-16455237731/JD3kCJrKoc8aEOOAvKY9',
-          'value': 1.0,
-          'currency': 'THB',
-          'event_callback': callback
-      });
-      return false;
-    }
-  </script>
 </body>
 </html>
