--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="iIe4AImoqYN-w2qKWGX6Pouy_HR8VVwQd7ggaAHU0cQ" />
   <title>แหวนเพชรแท้ GIA | แหวนแต่งงาน เพชรแท้ ราคาดี Mongkolsiri Diamond</title>
   <meta name="description" content="แหวนเพชรแท้ GIA แหวนแต่งงาน เพชรแท้คัดเกรด ดีไซน์หรู ราคาพิเศษ มีใบรับรอง GIA พร้อมบริการสลักชื่อ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond">
   <meta name="keywords" content="แหวนเพชรแท้ GIA, แหวนเพชรแต่งงาน, แหวนเพชร, เพชร GIA, แหวนแต่งงาน, wedding ring, diamond ring, ร้านแหวนเพชรแท้, ร้านเพชร GIA, diamond gia, diamond wedding ring">
