--- a/index.html
+++ b/index.html
@@ -25,28 +25,51 @@
   <meta name="twitter:image" content="https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg">
 
   <!-- Structured Data Product & Local Business -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org/",
-    "@type": "Product",
-    "name": "แหวนเพชรแท้ GIA",
-    "image": [
-      "https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg"
-    ],
-    "description": "แหวนเพชรแท้ GIA สำหรับคู่แต่งงาน ดีไซน์หรู มีใบรับรอง GIA แท้ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond",
-    "brand": { "@type": "Brand", "name": "Mongkolsiri Diamond" },
-    "offers": {
-      "@type": "Offer",
-      "priceCurrency": "THB",
-      "availability": "https://schema.org/InStock"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "แหวนเพชรแท้ GIA",
+  "image": [
+    "https://tuowzz.github.io/mbshopz.github.io/ring_image_1.jpeg"
+  ],
+  "description": "แหวนเพชรแท้ GIA สำหรับคู่แต่งงาน ดีไซน์หรู มีใบรับรอง GIA แท้ ส่งฟรีทั่วไทย ร้าน Mongkolsiri Diamond",
+  "brand": { "@type": "Brand", "name": "Mongkolsiri Diamond" },
+  "offers": {
+    "@type": "Offer",
+    "price": "29900",
+    "priceCurrency": "THB",
+    "availability": "https://schema.org/InStock",
+    "url": "https://tuowzz.github.io/mbshopz.github.io/",
+    "shippingDetails": {
+      "@type": "OfferShippingDetails",
+      "shippingRate": {
+        "@type": "MonetaryAmount",
+        "value": "0",
+        "currency": "THB"
+      },
+      "shippingDestination": {
+        "@type": "DefinedRegion",
+        "addressCountry": "TH"
+      }
     },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "4.9",
-      "reviewCount": "150"
+    "hasMerchantReturnPolicy": {
+      "@type": "MerchantReturnPolicy",
+      "applicableCountry": "TH",
+      "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+      "merchantReturnDays": 7,
+      "returnMethod": "https://schema.org/ReturnByMail",
+      "returnFees": "https://schema.org/FreeReturn"
     }
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "reviewCount": "150"
   }
-  </script>
+}
+</script>
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
