--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
     function trackLineContact() {
       // Facebook Custom Event – ทักไลน์ 1:1
       if (typeof fbq === 'function') {
-        fbq('trackCustom', 'Line_Contact');
+        fbq('track', 'Contact');
       }
 
       // TikTok Event – ทักไลน์ 1:1
