--- a/index.html
+++ b/index.html
@@ -766,6 +766,32 @@
       </div>
     </section>
 
+    <!-- CUSTOMER REVIEW VIDEO SECTION -->
+<section class="section">
+  <div class="shell">
+    <div class="section-card">
+      <div class="section-title">รีวิวจากลูกค้าจริง</div>
+      <div class="section-sub">
+        ความประทับใจจากคู่รักที่เลือกแหวนเพชรแท้ GIA กับ Mongkolsiri Diamond
+      </div>
+
+      <div class="video-wrapper" style="margin-bottom: 16px;">
+        <video controls playsinline style="border-radius: 16px; width: 100%;">
+          <source src="SaveTik.co_7534575569921510663.mp4" type="video/mp4">
+          เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
+        </video>
+      </div>
+
+      <div class="cta-row-centered">
+        <a href="https://lin.ee/ZRrK7cl" target="_blank" class="btn btn-primary js-line-contact">
+          💬 ขอชมรีวิวแบบอื่น / ทัก LINE
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
     <!-- GALLERY -->
     <section class="gallery-section" id="gallery">
       <div class="shell">
