--- a/index.html
+++ b/index.html
@@ -757,6 +757,32 @@
           </div>
         </div>
 
+        <!-- WEDDING RING GUIDE VIDEO SECTION -->
+<section class="section">
+  <div class="shell">
+    <div class="section-card">
+      <div class="section-title">แนะนำแบบแหวนแต่งงานยอดนิยม</div>
+      <div class="section-sub">
+        คู่รักส่วนใหญ่เลือกดีไซน์เหล่านี้ เพราะดีไซน์หรู ใส่ได้ทุกวัน และปรับงบประมาณได้ตามต้องการ
+      </div>
+
+      <div class="video-wrapper" style="margin-bottom: 16px;">
+        <video controls playsinline style="border-radius: 16px; width: 100%;">
+          <source src="SaveTik.co_7498735987615419655.mp4" type="video/mp4">
+          เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
+        </video>
+      </div>
+
+      <div class="cta-row-centered">
+        <a href="https://lin.ee/ZRrK7cl" target="_blank" class="btn btn-primary js-line-contact">
+          💬 ส่งรูปมือให้เรา แนะนำแบบที่เหมาะกับคุณ
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
         <div class="info-strip">
           <div class="info-strip-item">💎 เพชรแท้ GIA คัดเกรดทีละเม็ด</div>
           <div class="info-strip-item">✍️ สลักชื่อ–วันที่สำคัญฟรี</div>
