--- a/index.html
+++ b/index.html
@@ -757,7 +757,8 @@
           </div>
         </div>
 
-        <!-- WEDDING RING GUIDE VIDEO SECTION -->
+        
+     <!-- WEDDING RING GUIDE VIDEO SECTION (AUTOPLAY VERSION) -->
 <section class="section">
   <div class="shell">
     <div class="section-card">
@@ -766,8 +767,19 @@
         คู่รักส่วนใหญ่เลือกดีไซน์เหล่านี้ เพราะดีไซน์หรู ใส่ได้ทุกวัน และปรับงบประมาณได้ตามต้องการ
       </div>
 
-      <div class="video-wrapper" style="margin-bottom: 16px;">
-        <video controls playsinline style="border-radius: 16px; width: 100%;">
+      <div class="video-wrapper" style="margin-bottom:16px;">
+        <video 
+          autoplay 
+          muted 
+          playsinline 
+          loop
+          style="
+            border-radius: 16px; 
+            width: 100%; 
+            object-fit: cover;
+            max-height: 450px;
+          "
+        >
           <source src="SaveTik.co_7498735987615419655.mp4" type="video/mp4">
           เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
         </video>
@@ -781,6 +793,7 @@
     </div>
   </div>
 </section>
+
 
 
         <div class="info-strip">
