--- a/index.html
+++ b/index.html
@@ -881,6 +881,51 @@
             </div>
           </div>
 
+          <!-- EXPRESS DELIVERY VIDEO SECTION (AUTOPLAY) -->
+<section class="section">
+  <div class="shell">
+    <div class="section-card">
+      
+      <div class="section-title">บริการส่งด่วนทั่วกรุงเทพและปริมณฑล</div>
+      <div class="section-sub">
+        เรามีบริการจัดส่งด่วนให้ลูกค้าในกรุงเทพและปริมณฑล เพื่อให้คุณได้รับแหวนเพชรแท้อย่างรวดเร็ว ปลอดภัย และตรวจสอบของจริงก่อนรับได้
+      </div>
+
+      <div class="video-wrapper" style="margin-bottom: 16px;">
+        <video 
+          autoplay 
+          muted 
+          playsinline 
+          loop
+          style="
+            border-radius: 16px; 
+            width: 100%; 
+            object-fit: cover;
+            max-height: 450px;
+          "
+        >
+          <source src="SaveTik.co_7331262174356180232.mp4" type="video/mp4">
+          เบราว์เซอร์ของคุณไม่รองรับวิดีโอ
+        </video>
+      </div>
+
+      <div class="section-sub" style="margin-top: -10px; font-size: 0.88rem; color: #7a736a;">
+        ส่งเองโดยทีมงานร้าน • ปลอดภัย • ลูกค้าตรวจเช็คของจริงก่อนรับได้
+      </div>
+
+      <div class="cta-row-centered">
+        <a href="https://lin.ee/ZRrK7cl" 
+           target="_blank" 
+           class="btn btn-primary js-line-contact">
+           🚚 สอบถามบริการส่งด่วน / นัดรับวันนี้
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
           <div class="cta-row-centered">
             <a href="https://lin.ee/ZRrK7cl" target="_blank" class="btn btn-primary js-line-contact">
               💬 ส่งรูปมือ + งบประมาณให้เรา แนะนำดีไซน์ที่เหมาะให้เลย
